--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,11 +1,8 @@
 server.port=8080
 # DATABASE
-#spring.datasource.url=jdbc:mysql://localhost:3306/du_an_tot_nghiep?useUnicode=yes&characterEncoding=UTF-8&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=Asia/Ho_Chi_Minh
-#spring.datasource.username=root
-#spring.datasource.password=123456
-spring.datasource.url=jdbc:mysql://du-an-tot-nghiep.c7mnltsfj8yd.ap-southeast-2.rds.amazonaws.com:3306/du_an_tot_nghiep?useUnicode=yes&characterEncoding=UTF-8&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=Asia/Ho_Chi_Minh
-spring.datasource.username=admin
-spring.datasource.password=12345678
+spring.datasource.url=jdbc:mysql://localhost:3306/du_an_tot_nghiep?useUnicode=yes&characterEncoding=UTF-8&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=Asia/Ho_Chi_Minh
+spring.datasource.username=root
+spring.datasource.password=123456
 
 #spring.datasource.url=jdbc:mysql://du-an-tot-nghiep.c7mnltsfj8yd.ap-southeast-2.rds.amazonaws.com:3306/du_an_tot_nghiep?useUnicode=yes&characterEncoding=UTF-8&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=Asia/Ho_Chi_Minh
 #spring.datasource.username=admin
