--- a/font-end/package.json
+++ b/font-end/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.14.11",
     "antd": "^5.9.0",
     "axios": "^1.5.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
