--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 server.port=8080
 # DATABASE
-spring.datasource.url=jdbc:mysql://localhost:3306/du_an_tot_nghiep?useUnicode=yes&characterEncoding=UTF-8&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=Asia/Ho_Chi_Minh
+spring.datasource.url=jdbc:mysql://localhost:3306/du_an_tot_nghiep?useUnicode=yes&characterEncoding=UTF-8&useSSL=false&createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=123456
+spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Ho_Chi_Minh
 
 #spring.datasource.url=jdbc:mysql://du-an-tot-nghiep.c7mnltsfj8yd.ap-southeast-2.rds.amazonaws.com:3306/du_an_tot_nghiep?useUnicode=yes&characterEncoding=UTF-8&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=Asia/Ho_Chi_Minh
 #spring.datasource.username=admin
@@ -10,19 +11,11 @@ spring.datasource.password=123456
 
 # HIBERNATE
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Send Email
-#spring.mail.host=smtp.gmail.com
-#spring.mail.port=587
-#spring.mail.username=shop.niek@gmail.com
-#spring.mail.password=awoznakucscbfgds
-#spring.mail.properties.mail.smtp.auth=false
-#spring.mail.properties.mail.smtp.starttls.enable=false
-#spring.jackson.serialization.fail-on-empty-beans=false
-
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=beesport.soccer@gmail.com
