--- a/font-end/package.json
+++ b/font-end/package.json
@@ -18,6 +18,7 @@
     "antd-img-crop": "^4.13.0",
     "axios": "^1.5.0",
     "dayjs": "^1.11.10",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
