--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -121,6 +121,13 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
+<!--        Export PDF-->
+        <dependency>
+            <groupId>com.github.librepdf</groupId>
+            <artifactId>openpdf</artifactId>
+            <version>1.3.34</version>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
