--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Ho_Chi_Minh
 
 # HIBERNATE
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
